--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~src/scss/typography';
+@import '../node_modules/flexboxgrid-sass/flexboxgrid';
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+}
