Add about section module with child routes

--- a/src/app/components/ui/header/header.component.html
+++ b/src/app/components/ui/header/header.component.html
@@ -1,7 +1,14 @@
 <header class="container-fluid">
   <div class="row">
     <div class="col-xs-4">
-      <h1 class="page-title">Cornichon</h1>
+      <h1 class="page-title">
+        <a routerLink="/">Cornichon</a>
+      </h1>
     </div>
+    <nav class="col-xs-8">
+      <a routerLink="/about" routerLinkActive="active">
+        About
+      </a>
+    </nav>
   </div>
 </header>
