--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -11,4 +11,5 @@ $color-yellow-dark: darken(#ffcc66, 10%);
 $color-yellow-light: lighten(#ffcc66, 10%);
 
 // border
-$default-border: 1px solid $color-grey-light;
+$border-default: 1px solid $color-grey-light;
+$border-color: 1px solid $color-green-dark;
