--- a/src/app/components/ui/header/header.component.scss
+++ b/src/app/components/ui/header/header.component.scss
@@ -1,9 +1,39 @@
 @import '~src/scss/variables';
 
 header {
-  border-bottom: $default-border;
-}
+  border-bottom: $border-default;
 
-.page-title {
-  color: $color-green-light;
+  .page-title {
+    a {
+      color: $color-green-light;
+      text-decoration: none;
+    }
+  }
+
+  nav {
+    display: flex;
+    flex-flow: row-reverse nowrap;
+    align-items: stretch;
+
+    a {
+      display: flex;
+      flex-flow: row nowrap;
+      align-items: center;
+      padding: 0 16px;
+      color: $color-green-light;
+      text-decoration: none;
+      border-bottom: 1px solid transparent;
+
+      &.active {
+        border-bottom: $border-color;
+      }
+
+      &:visited {
+        color: $color-green-light;
+      }
+      &:hover {
+        color: $color-green-dark;
+      }
+    }
+  }
 }
