--- a/src/app/components/ui/header/header.component.html
+++ b/src/app/components/ui/header/header.component.html
@@ -6,9 +6,10 @@
       </h1>
     </div>
     <nav class="col-xs-8">
-      <a routerLink="/about" routerLinkActive="active">
+      <a class ="nav-link nav-link-horizontal" routerLink="/about" routerLinkActive="active">
         About
       </a>
+      <button class="btn btn-primary">Write a Spec</button>
     </nav>
   </div>
 </header>
