--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,3 +1,6 @@
-<main class="container-fluid">
-  <router-outlet></router-outlet>
-</main>
+<div class="container-layout container-layout-sidebar">
+  <app-sidebar></app-sidebar>
+  <main class="container-content-main container-fluid">
+    <router-outlet></router-outlet>
+  </main>
+</div>
