--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -21,15 +21,24 @@ body {
 
 .container-layout-sidebar {
   .container-content-sidebar {
-    flex: 0 1 25%;
+    flex: 0 1 35%;
     display: flex;
     flex-flow: column nowrap;
     border-right: $border-default;
+
     height: 100%;
     overflow-y: scroll;
+
+    transition: $transition-default;
+    width: 200px;
+
+    &.collapsed {
+      transition: $transition-default;
+      width: 48px;
+    }
   }
   
   .container-content-main {
-    flex: 3 0 75%;
-  }  
+    flex: 3 0 65%;
+  }
 }
